# llm-scheduling

./: .cursorrules  .gitignore  README.md  pyproject.toml
llm-scheduling/: chatbot.py
task/: 01-protocol.md  01-task.md  ARCHITECTURE.md  PROBLEM_STATEMENT.md  prompt.md  sample.json
