[tool.poetry]
name = "llm-scheduling"
version = "0.1.0"
description = ""
authors = ["Raphael MANSUY <raphael.mansuy.partner@decathlon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.43.0"
colorama = "^0.4.6"
pydantic = {extras = ["email"], version = "^2.8.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
